static/styles.css
body {
  margin: 10px;
  padding: 10px;
  height: 100vh;
  background-color: rgba(81, 81, 79, 1);
}

.centered-image {
  max-width: 70%;
  max-height: 50%;
  opacity: 0.5;
}

.gris{
  background-color: rgba(81, 81, 79, 0);
}

.Tenuki {
  width: 10%;
}

.GoStreamHome {
  margin: 100px;
  width: 50%;
}

.GoStream {
  width: 80%;
}

.GoStreamFooter {
  width: 10%;
  margin-left: 100px;
}
.custom-button { background-color: rgb(202, 202, 202); }

.btn-petit{
  font-size: 15px;
  padding: 10px 10px;
  background-color: #ecce97;
  color: #000000;
  margin: 20px;
  text-decoration: none; /* Remove underlines from links */
  max-width: 80%;

}

.btn-annuler{
  font-size: 15px;
  padding: 10px 10px;
  background-color: #dd7266;
  color: #000000;
  margin: 20px;
  text-decoration: none; /* Remove underlines from links */
  max-width: 80%;

}

.custom-marging {
  margin-right: 5px; 
}

.btn-nav{
  font-size: 15px;
  margin-top: 10px;
  background-color: #ecce97;
  color: #000000;
  text-decoration: none; /* Remove underlines from links */
}

button{
  border: none;
  cursor: pointer;
  appearance: none;
  background-color: inherit;
  transition: transform .7s ease-in-out;
  margin-left:10px;
}

.containerCenter {
  display: flex;
  justify-content: center;
  align-items: center;
}
.custom-color {
  color: #ecce97; /* Change the color to your desired color */
}
.custom-container{
  border: 0px;
  margin: 0px;
  padding: 0px;
}

.custom-form {
  max-width: 100%;
}
.custom-size {
  font-size: 25px; /* Change the font size to your desired size */
}
.btn-grand {
  font-size: 30px;
  padding: 10px 10px;
  background-color: #ecce97;
  color: #000000;
  margin: 20px auto; /* Add margin for vertical spacing */
  text-decoration: none; /* Remove underlines from links */
  display: block; /* Make it a block element */
  max-width:600px; /* Set a maximum width for the buttons */

}

.btn-grand a {
  color: #000000; /* Set the color of the links */
  text-decoration: none; /* Remove underlines from links */
}

.homeBoard{
  width: 70%;
  text-align: center;
  margin: 150px;
}

.btn-sommaire{
  font-size: 48px;
  padding: 30px 60px;
}
#image {
  /*float: left;*/
  position: relative;
  width: 100%; 
  box-sizing: border-box; /* Inclut la bordure et le padding dans la largeur */
  margin-right: 0px; /* Ajustez la marge selon vos besoins */
}

#video-container {
  /*float: left;*/
  position: relative;
  width: 90%; /* Chaque div prend la moitié de la largeur */
  box-sizing: border-box; /* Inclut la bordure et le padding dans la largeur */
  margin-right: 10px; /* Ajustez la marge selon vos besoins */
}

#camera-feed, #image img {
  width: 100%; /* Les images occupent la largeur complète de leur parent */
  height: auto; /* Maintient le ratio d'aspect original */
}

#message {
  clear: both; /* Empêche les éléments suivants de flotter à gauche ou à droite des div flottantes */
  margin-top: 10px; /* Ajoute de l'espace entre le message et les div précédentes */
  color: #f95737;
  font-size: 20px;

}

